--- a/docs/invitacionNoah.css
+++ b/docs/invitacionNoah.css
@@ -213,10 +213,10 @@ button:hover {
 
 @media only screen and (max-width: 932px) {
     .container-principal {
-        width: 540px;
-        margin: 0px;
-        padding: 0px;
-        border: 0px;
+        max-width: 100%; /* Esto asegura que ocupe el 100% del ancho disponible */
+        margin: 0 auto; /* Centra el contenido */
+        padding: 0;
+        border: none;
         
     }
     
@@ -229,7 +229,7 @@ button:hover {
 
         
     .estilo-uno{
-        font-size: 80px;
+        font-size: 70px;
         line-height: 0;
         
          
@@ -238,7 +238,7 @@ button:hover {
   
 
     .estilo-dos {
-        font-size: 30px;
+        font-size: 25px;
      
 
     }
@@ -253,7 +253,7 @@ button:hover {
         margin-right: 70px;
     }
     .estilo-tres {
-        font-size: 80px;
+        font-size: 70px;
     
     }
 
@@ -279,7 +279,7 @@ button:hover {
     #dia {
         height: 100px;
         width: 100px;
-        font-size: 70px;
+        font-size: 60px;
         padding-bottom: 20px;
         
     }
@@ -346,6 +346,21 @@ button:hover {
         width: 350px;
     }
         
+
+    .img-arbol, .container-frase, .container-fecha-nombre, .container-familia, .vestimenta, .carousel, .ubicacion {
+        opacity: 0;
+        transform: translateY(50px);
+        transition: opacity 2s ease-out, transform 2s ease-out;
+
+    }
+
+   
+
+    /* Cuando el elemento entra en la vista, aplicamos la animación */
+    .visible {
+    opacity: 1;
+    transform: translateY(0);
+    }
 
 
 
