--- a/docs/invitacionNoah.css
+++ b/docs/invitacionNoah.css
@@ -326,6 +326,16 @@ button:hover {
 
     }
 
+    #clic {
+        font-size: 15px;
+        text-align: justify;
+        margin-right: 100px;
+        margin-left: 100px;
+        margin-top: 0px;
+        text-decoration: underline;
+        
+    }
+
         
     
     #mapa{
