--- a/docs/invitacionNoah.css
+++ b/docs/invitacionNoah.css
@@ -209,6 +209,46 @@ button:hover {
 }
 
 
+    /*modal*/
+/* Estilos básicos del modal */
+.modal {
+    display: none; /* Ocultamos el modal por defecto */
+    position: fixed;
+    z-index: 1000; /* Se asegura que el modal esté sobre otros elementos */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Permitir scroll si el contenido es largo */
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+  }
+  
+  /* Contenido del modal */
+  .modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ajusta el tamaño según sea necesario */
+    max-width: 600px;
+    text-align: center;
+    border-radius: 10px;
+  }
+  
+  /* Botón para cerrar */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 
 @media only screen and (max-width: 932px) {
     .container-principal {
@@ -372,6 +412,8 @@ button:hover {
     opacity: 1;
     transform: translateY(0);
     }
+
+
 
 
 
