--- a/docs/invitacionNoah.css
+++ b/docs/invitacionNoah.css
@@ -211,17 +211,38 @@ button:hover {
 
     /*modal*/
 /* Estilos básicos del modal */
+
+/*
 .modal {
-    display: none; /* Ocultamos el modal por defecto */
+    display: none; 
     position: fixed;
-    z-index: 1000; /* Se asegura que el modal esté sobre otros elementos */
+    z-index: 1000; 
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Permitir scroll si el contenido es largo */
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.7);  Fondo semitransparente
   }
+  
+*/
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100vw; /* Usamos unidades de viewport para asegurar que ocupe el ancho completo */
+    height: 100vh; /* Aseguramos que ocupe el alto completo de la pantalla */
+    background-color: rgba(0, 0, 0, 0.7);
+    overflow: auto; /* Habilitamos el scroll si es necesario */
+    -webkit-overflow-scrolling: touch; /* Esto mejora el comportamiento de scroll en Safari iOS */
+  }
+  .modal {
+    z-index: 10000; /* Asegúrate de que el valor sea alto para que siempre esté por encima de otros elementos */
+  }
+
   
   /* Contenido del modal */
   .modal-content {
